Added a known issue to the release notes.

--- a/doc-Release_Notes/enhancements.adoc
+++ b/doc-Release_Notes/enhancements.adoc
@@ -55,6 +55,8 @@ directly from the Red Hat CloudForms appliance web user interface.
 Red Hat Access Insights is an automated service that provides
 information that helps users to rapidly identify key issues in
 their Red Hat CloudForms deployment.
++
+Support for the Red Hat Access Insights Plug-In is in Technology Preview. See link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope]. 
 
 Microsoft Azure Providers::
 
@@ -67,6 +69,8 @@ The Microsoft Azure Integration will deliver the following capabilities to Red H
 * Capacity
 * Relationships
 * Utilization
++
+Support for Microsoft Azure providers is in Technology Preview. See link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope].
 
 Red Hat OpenShift v3 Providers::
 
