Update per Alissa's comments

--- a/doc-Managing_Providers/Managing_Containers.adoc
+++ b/doc-Managing_Providers/Managing_Containers.adoc
@@ -172,6 +172,7 @@ A +Replicators+ summary page allows you to view information on different aspects
 
 * What is the number of requested pods?
 * What is the number of current pods?
+* What are the labels and selector for the replicator?
 
 .Viewing a Replicators Summary
 . Navigate to menu:Containers[Providers]. 
@@ -179,13 +180,30 @@ A +Replicators+ summary page allows you to view information on different aspects
 . In the +Relationships+ box on the right-hand side of the summary page, click +Replicators+.
 . Click the desired replicator for viewing.
 
+=== Viewing a Container Services Summary
+
+A +Container Services+ summary page allows you to view information on different aspects of a container service, for example:
+
+* What are the pods that the container service provides traffic to?
+* What are the port configurations for the container service?
+* What are the labels and selector for the container service?
+
+.Viewing a Container Services Summary
+. Navigate to menu:Containers[Providers]. 
+. Click the desired containers provider for viewing the provider summary.
+. In the +Relationships+ box on the right-hand side of the summary page, click +Services+.
+. Click the desired service for viewing.
+
 === Using the Topology Widget
 
 The +Topology+ widget is an interactive topology graph, showing the status and relationships between the different entities of the containers providers that CloudForms Management Engine has access to.
 
 * The topology graph includes pods, containers, services, nodes, virtual machines, hosts, routes, and replicators within the overall containers provider environment.
-* Selecting any individual graph node will display a summary of details for the individual node.
 * It is possible to drag elements to reposition the graph.
+* Hovering over any individual graph node will display a summary of details for the individual node.
+* Double-click the entities in the graph to navigate to their summary pages.
+* Click the legend at the top of the graph to show or hide entities.
+* Click +Display Names+ on the right-hand side of the page to show or hide entity names.
 
 [caption="Topology Widget"]
 image::topology-widget.png[Topology Widget, width=660]
