--- a/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
@@ -12,12 +12,12 @@ The CloudForms Management Engine Appliance is intended to have minimal configura
 
 The procedure describes how to make changes to the configuration settings on the CloudForms Management Engine appliance.
 
-. After starting the appliance, log in with a user name of +root+ and the default password of +smartvm+. This displays the Bash prompt for the +root+ user.
-. Enter the +appliance_console+ command. The +CloudForms Management Engine Appliance summary screen+ displays.
-. Press +Enter+ to manually configure settings.
-. Press the number for the item you want to change, and press +Enter+. The options for your selection are displayed.
+. After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
+. Enter the **appliance_console** command. The +CloudForms Management Engine Appliance summary screen+ displays.
+. Press kbd:[Enter] to manually configure settings.
+. Press the number for the item you want to change, and press kbd:[Enter]. The options for your selection are displayed.
 . Follow the prompts to make the changes.
-. Press +Enter+ to accept a setting where applicable.
+. Press kbd:[Enter] to accept a setting where applicable.
 
 [NOTE]
 ======
@@ -76,7 +76,7 @@ Before installing an internal database, add a disk to the infrastructure hosting
 . Start the appliance and open a terminal from your virtualization or cloud provider.
 . After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
 . Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press +Enter+ to manually configure settings.
+. Press kbd:[Enter] to manually configure settings.
 . Select +8) Configure Database+ from the menu.
 . You are prompted to create or fetch an encryption key.
 * If this is the first CFME appliance, choose +1) Create key+.
@@ -120,7 +120,7 @@ CloudForms Management Engine 3.x requires PostgreSQL version 9.2.4.
 . Start the appliance and open a terminal console from your virtualization or cloud provider.
 . After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
 . Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press +Enter+ to manually configure settings.
+. Press kbd:[Enter] to manually configure settings.
 . Select +8) Configure Database+ from the menu.
 . You are prompted to create or fetch a security key.
 * If this is the first CFME appliance, select the option to create a key.
@@ -141,7 +141,7 @@ You can configure a worker appliance through the terminal. These steps demonstra
 . Start the appliance, and open a terminal console from your virtualization or cloud provider.
 . After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
 . Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press +Enter+ to manually configure settings.
+. Press kbd:[Enter] to manually configure settings.
 . Select +8) Configure Database+ from the menu.
 . You are prompted to create or fetch a security key. Select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
 . Choose +2) External+ for the database location.
