BZ#1289527-Review Edits

--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Configuring_CloudForms.adoc
@@ -4,9 +4,9 @@
 Although the CloudForms Management Engine Appliance comes configured to be integrated immediately into your environment, you can make some changes to its configuration.
 
 [NOTE]
-=======
+======
 The CloudForms Management Engine Appliance is intended to have minimal configuration options.
-=======
+======
 
 === Changing Configuration Settings
 
@@ -14,15 +14,15 @@ The procedure describes how to make changes to the configuration settings on the
 
 . After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
 . Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press +Enter+ to manually configure settings.
-. Press the number for the item you want to change, and press +Enter+. The options for your selection are displayed.
+. Press kbd:[Enter] to manually configure settings.
+. Press the number for the item you want to change, and press kbd:[Enter]. The options for your selection are displayed.
 . Follow the prompts to make the changes.
-. Press +Enter+ to accept a setting where applicable.
+. Press kbd:[Enter] to accept a setting where applicable.
 
 [NOTE]
-=======
+======
 The CloudForms Management Engine Appliance console automatically logs out after five minutes of inactivity.
-=======
+======
 
 === Advanced Configuration Settings
 
@@ -62,21 +62,21 @@ Before using CloudForms Management Engine, configure the database options for it
 * Configure the appliance to use an external PostgreSQL database
 
 [NOTE]
-=======
+======
 See "CPU Sizing Assistant for a Dedicated VMDB Host" in the Deployment Planning Guide for guidelines on CPU requirements.
-=======
+======
 
 === Configuring an Internal Database
 
 [IMPORTANT]
-=======
+======
 Before installing an internal database, add a disk to the infrastructure hosting your appliance. See the documentation specific to your infrastructure for instructions on how to add a disk. As a storage disk usually cannot be added while a virtual machine is running, Red Hat recommends adding the disk before starting the appliance.
-=======
+======
 
 . Start the appliance and open a terminal from your virtualization or cloud provider.
 . After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
 . Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press +Enter+ to manually configure settings.
+. Press kbd:[Enter] to manually configure settings.
 . Select +8) Configure Database+ from the menu.
 . You are prompted to create or fetch an encryption key.
 * If this is the first CFME appliance, choose +1) Create key+.
@@ -95,9 +95,9 @@ Enter +1+ to choose /dev/vdb for the database location.
 .  When prompted, enter a unique three digit region ID to create a new region.
 +
 [IMPORTANT]
-=======
+======
 Creating a new region destroys any existing data on the chosen database.
-=======
+======
 +
 .  Confirm the configuration when prompted.
 
@@ -113,14 +113,14 @@ necessary to alter the max_connections setting.
 Because the postgresql.conf file controls the operation of all databases managed by a single instance of PostgreSQL, do not mix CloudForms Management Engine databases with other types of databases in a single PostgreSQL instance.
 
 [NOTE]
-=======
+======
 CloudForms Management Engine 3.x requires PostgreSQL version 9.2.4.
-=======
+======
 
 . Start the appliance and open a terminal console from your virtualization or cloud provider.
 . After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
 . Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press +Enter+ to manually configure settings.
+. Press kbd:[Enter] to manually configure settings.
 . Select +8) Configure Database+ from the menu.
 . You are prompted to create or fetch a security key.
 * If this is the first CFME appliance, select the option to create a key.
@@ -141,7 +141,7 @@ You can configure a worker appliance through the terminal. These steps demonstra
 . Start the appliance, and open a terminal console from your virtualization or cloud provider.
 . After starting the appliance, log in with a user name of **root** and the default password of **smartvm**. This displays the Bash prompt for the **root** user.
 . Enter the **appliance_console** command. The CloudForms Management Engine Appliance summary screen displays.
-. Press +Enter+ to manually configure settings.
+. Press kbd:[Enter] to manually configure settings.
 . Select +8) Configure Database+ from the menu.
 . You are prompted to create or fetch a security key. Select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
 . Choose +2) External+ for the database location.
