--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
@@ -10,24 +10,24 @@ After installing the CloudForms Management Engine Appliance, you must configure 
 
 === Obtaining the CloudForms Management Engine Appliance
 
-. Go to https://access.redhat.com and log in to the Red Hat Customer Portal using your customer account details.
-. Click +Downloads+ in the menu bar.
-. Click +A-Z+ to sort the product downloads alphabetically.
-. Click +Red Hat CloudForms+ and then +Download Latest+ to access the product download page.
+. Go to link:https://access.redhat.com[access.redhat.com] and log in to the Red Hat Customer Portal using your customer account details.
+. Click btn:[Downloads] in the menu bar.
+. Click btn:[A-Z] to sort the product downloads alphabetically.
+. Click menu:Red Hat CloudForms[Download Latest] to access the product download page.
 . From the list of installers and images, select the +CFME Red Hat Virtual Appliance+ download link.
 
 === Uploading the Appliance on Red Hat Enterprise Virtualization Manager
 
 Uploading the CloudForms Management Engine Appliance file onto Red Hat Enterprise Virtualization Management systems has the following requirements:
 
-* 44 GB of storage space on both the export domain and the local partition where /tmp resides since the OVF archive is locally expanded into that directory.
-* Install the rhevm-image-uploader package containing the engine-image-uploader script to your local machine.
+* 44 GB of storage space on both the export domain and the local partition where **/tmp** resides since the OVF archive is locally expanded into that directory.
+* Install the **rhevm-image-uploader** package containing the engine-image-uploader script to your local machine.
 +
 ----
 # yum install rhevm-image-uploader
 ----
 +
-It is recommended to use -v (verbose logging) when using the engine-image-uploader script to see the progression of the upload.
+It is recommended to use -v (verbose logging) when using the **engine-image-uploader** script to see the progression of the upload.
 * Depending on your infrastructure, allow approximately 90 minutes for the upload.
 * Once the OVF is uploaded and imported as a template, add a network adapter to the template itself.
 
@@ -36,9 +36,9 @@ It is recommended to use -v (verbose logging) when using the engine-image-upload
 The engine-image-uploader command allows you to list export storage domains and upload virtual machine images in OVF format to an export storage domain and have them automatically recognized in the Red Hat Enterprise Virtualization Manager.
 
 [NOTE]
-=======
+======
 The image uploader only supports gzip-compressed OVF files created by Red Hat Enterprise Virtualization.
-=======
+======
 
 The archive contains images and master directories in the following format:
 
@@ -66,7 +66,7 @@ The image uploader command supports two actions - list, and upload.
 
 You must specify one of the above actions when you use the image uploader command. Moreover, you must specify at least one local file to use the upload action.
 
-There are several parameters to further refine the engine-image-uploader command. You can set defaults for any of these parameters in the /etc/ovirt-engine/imageuploader.conf file.
+There are several parameters to further refine the **engine-image-uploader** command. You can set defaults for any of these parameters in the **/etc/ovirt-engine/imageuploader.conf** file.
 
 *General Options*
 
@@ -76,15 +76,15 @@ Displays information on how to use the image uploader command.
 
 +--conf-file=[PATH]+
 
-Sets +[PATH]+ as the configuration file the command will use. The default is +/etc/ovirt-engine/imageuploader.conf+.
+Sets +[PATH]+ as the configuration file the command will use. The default is **/etc/ovirt-engine/imageuploader.conf**.
 
 +--log-file=[PATH]+
 
-Sets +[PATH]+ as the specific file name the command will use to write log output. The default is +/var/log/ovirt-engine/ovirt-image-uploader/ovirt-image-uploader-[date].log+.
+Sets +[PATH]+ as the specific file name the command will use to write log output. The default is **/var/log/ovirt-engine/ovirt-image-uploader/ovirt-image-uploader-[date].log**.
 
 +--cert-file=[PATH]+
 
-Sets [PATH] as the certificate for validating the engine. The default is /etc/pki/ovirt-engine/ca.pem.
+Sets [PATH] as the certificate for validating the engine. The default is **/etc/pki/ovirt-engine/ca.pem**.
 
 +--insecure+
 
@@ -106,15 +106,15 @@ Force mode is necessary when the source file being uploaded has the same file na
 
 +-u [USER], --user=[USER]+
 
-Specifies the user whose credentials will be used to execute the command. The +[USER]+ is specified in the format +[username]@[domain]+. The user must exist in the specified domain and be known to the Red Hat Enterprise Virtualization Manager.
+Specifies the user whose credentials will be used to execute the command. The +[USER]+ is specified in the format **[username]@[domain]**. The user must exist in the specified domain and be known to the Red Hat Enterprise Virtualization Manager.
 
 +-r [FQDN], --engine=[FQDN]+
 
-Specifies the IP address or fully qualified domain name of the Red Hat Enterprise Virtualization Manager from which the images will be uploaded. It is assumed that the image uploader is being run from the same machine on which the Red Hat Enterprise Virtualization Manager is installed. The default value is +localhost:443+.
+Specifies the IP address or fully qualified domain name of the Red Hat Enterprise Virtualization Manager from which the images will be uploaded. It is assumed that the image uploader is being run from the same machine on which the Red Hat Enterprise Virtualization Manager is installed. The default value is **localhost:443**.
 
 *Export Storage Domain Options*
 
-The following options specify the export domain to which the images will be uploaded. These options cannot be used together; you must used either the +-e+ option or the +-n+ option.
+The following options specify the export domain to which the images will be uploaded. These options cannot be used together; you must used either the **-e** option or the **-n** option.
 
 +-e [EXPORT_DOMAIN], --export-domain=[EXPORT_DOMAIN]+
 
