Update container image topic

--- a/doc-Managing_Providers/Managing_Containers.adoc
+++ b/doc-Managing_Providers/Managing_Containers.adoc
@@ -81,7 +81,7 @@ A +Containers Provider+ summary page allows you to view information on different
 [caption="Entity Relationships"]
 image::entity-relationships.png[Entity Relationships, height=460]
 +
-* Additional information on the number of aggregate node CPU cores or aggregate node memory.
+* Additional information on aggregated capacity of all CPU cores of all nodes, and aggregated capacity of all memory of all nodes.
 
 .Viewing a Containers Provider Summary
 . Navigate to menu:Containers[Providers]. 
@@ -115,7 +115,8 @@ A +Containers+ summary page allows you to view information on different aspects 
 * Which node is the container running on?
 * Which part of a pod is the container?
 * What is the container ID?
-* What is the container's image name?
+* What is the name of the container image?
+* What are other properties of the container image (for example, tag)?
 
 .Viewing a Containers Summary
 . Navigate to menu:Containers[Providers]. 
