Added a note to General Configuration that Red Hat Access Insights is in Tech Preview.

--- a/doc-General_Configuration/RH_Access_Insights.adoc
+++ b/doc-General_Configuration/RH_Access_Insights.adoc
@@ -6,6 +6,11 @@
 
 Red Hat Access Insights provides an easy to use dashboard that enables system administrators and IT operations managers to quickly identify key risks to stability, security, or performance. A glance at the display allows users to sort by category, view details of the impact and resolution, and then quickly determine what systems are affected.
 
+[NOTE]
+======
+Red Hat Access Insights is available as a technology preview in this release of Red Hat CloudForms. For more information on the support scope for features marked as technology previews, see link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope].
+======
+
 /////////////////////////////////
 With daily or weekly check ins, Red Hat Access Insights provides a dashboard of what is happening with your systems. The interface displays specific stability, security, and performance issues in affected systems, and offers clear remediation steps. With that knowledge in hand you can then resolve the critical issue and avoid future impact.
 
