--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
@@ -173,11 +173,7 @@ It takes approximately 90 minutes to upload the CloudForms Management Engine App
 
 === Uploading the Appliance Manually
 
-The following procedure provides manual upload instructions if the Image
-Uploader tool is not available or fails to upload.
-
-Procedure 2. To Manually Upload the CloudForms Management Engine
-Appliance
+The following procedure provides manual upload instructions if the Image Uploader tool is not available or fails to upload.
 
 . Log into a host in your Red Hat Enterprise Virtualization with a mount to the Export storage domain.
 . Change to the Export storage domain's directory.
