BZ#1289527-Review Edits

--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
@@ -84,7 +84,7 @@ Sets +[PATH]+ as the specific file name the command will use to write log output
 
 **--cert-file=[PATH]**
 
-Sets [PATH] as the certificate for validating the engine. The default is +/etc/pki/ovirt-engine/ca.pem+.
+Sets +[PATH]+ as the certificate for validating the engine. The default is +/etc/pki/ovirt-engine/ca.pem+.
 
 **--insecure**
 
@@ -94,7 +94,7 @@ Specifies that no attempt will be made to verify the engine.
 
 Sets quiet mode, reducing console output to a minimum.
 
-**+-v, --verbose**
+**-v, --verbose**
 
 Sets verbose mode, providing more console output.
 
