--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
@@ -27,13 +27,13 @@ Uploading the CloudForms Management Engine Appliance file onto Red Hat Enterpris
 # yum install rhevm-image-uploader
 ----
 +
-It is recommended to use -v (verbose logging) when using the **engine-image-uploader** script to see the progression of the upload.
+It is recommended to use **-v** (verbose logging) when using the **engine-image-uploader** script to see the progression of the upload.
 * Depending on your infrastructure, allow approximately 90 minutes for the upload.
 * Once the OVF is uploaded and imported as a template, add a network adapter to the template itself.
 
 === Using the Image Uploader Tool
 
-The engine-image-uploader command allows you to list export storage domains and upload virtual machine images in OVF format to an export storage domain and have them automatically recognized in the Red Hat Enterprise Virtualization Manager.
+The engine-image-uploader command allows you to list export storage domains and upload virtual machine images in **OVF** format to an export storage domain and have them automatically recognized in the Red Hat Enterprise Virtualization Manager.
 
 [NOTE]
 ======
@@ -59,10 +59,10 @@ The basic syntax for the image uploader command is:
 engine-image-uploader [options] listengine-image-uploader [options] upload [file].[file]...[file]
 ----
 
-The image uploader command supports two actions - list, and upload.
+The image uploader command supports two actions - +list+, and +upload+.
 
-* The list action lists the export storage domains to which images can be uploaded.
-* The upload action uploads images to the specified export storage domain.
+* The **list** action lists the export storage domains to which images can be uploaded.
+* The **upload** action uploads images to the specified export storage domain.
 
 You must specify one of the above actions when you use the image uploader command. Moreover, you must specify at least one local file to use the upload action.
 
@@ -86,7 +86,7 @@ Sets +[PATH]+ as the specific file name the command will use to write log output
 
 Sets +[PATH]+ as the certificate for validating the engine. The default is +/etc/pki/ovirt-engine/ca.pem+.
 
-**--insecure**
+**-i, --insecure**
 
 Specifies that no attempt will be made to verify the engine.
 
@@ -94,7 +94,7 @@ Specifies that no attempt will be made to verify the engine.
 
 Sets quiet mode, reducing console output to a minimum.
 
-**-v, --verbose**
+**--verbose**
 
 Sets verbose mode, providing more console output.
 
