--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
@@ -20,7 +20,7 @@ After installing the CloudForms Management Engine Appliance, you must configure 
 
 Uploading the CloudForms Management Engine Appliance file onto Red Hat Enterprise Virtualization Management systems has the following requirements:
 
-* 44 GB of storage space on both the export domain and the local partition where **/tmp** resides since the OVF archive is locally expanded into that directory.
+* 44 GB of storage space on both the export domain and the local partition where **/tmp** resides since the **OVF** archive is locally expanded into that directory.
 * Install the **rhevm-image-uploader** package containing the engine-image-uploader script to your local machine.
 +
 ----
@@ -29,15 +29,15 @@ Uploading the CloudForms Management Engine Appliance file onto Red Hat Enterpris
 +
 It is recommended to use **-v** (verbose logging) when using the **engine-image-uploader** script to see the progression of the upload.
 * Depending on your infrastructure, allow approximately 90 minutes for the upload.
-* Once the OVF is uploaded and imported as a template, add a network adapter to the template itself.
+* Once the **OVF** is uploaded and imported as a template, add a network adapter to the template itself.
 
 === Using the Image Uploader Tool
 
-The engine-image-uploader command allows you to list export storage domains and upload virtual machine images in **OVF** format to an export storage domain and have them automatically recognized in the Red Hat Enterprise Virtualization Manager.
+The **engine-image-uploader** command allows you to list export storage domains and upload virtual machine images in **OVF** format to an export storage domain and have them automatically recognized in the Red Hat Enterprise Virtualization Manager.
 
 [NOTE]
 ======
-The image uploader only supports gzip-compressed OVF files created by Red Hat Enterprise Virtualization.
+The image uploader only supports **gzip-compressed OVF** files created by Red Hat Enterprise Virtualization.
 ======
 
 The archive contains images and master directories in the following format:
