Created new topic for assigning tags to a virtual machine

--- a/doc-Red_Hat_CloudForms_REST_API/chap-Examples.adoc
+++ b/doc-Red_Hat_CloudForms_REST_API/chap-Examples.adoc
@@ -76,6 +76,9 @@ include::topics/assign_tags.adoc[]
 include::topics/assign_tags_to_service_template.adoc[]
 
 :leveloffset: 3
+include::topics/assign_tags_vm.adoc[]
+
+:leveloffset: 3
 include::topics/unassign_tags.adoc[]
 
 
