--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
@@ -130,11 +130,11 @@ The following options allow you to customize which attributes of the images bein
 
 **-i, --ovf-id**
 
-Specifies that the UUID of the image will not be updated. By default, the command generates a new UUID for images that are uploaded. This ensures there is no conflict between the id of the image being uploaded and the images already in the environment.
+Specifies that the +UUID+ of the image will not be updated. By default, the command generates a new +UUID+ for images that are uploaded. This ensures there is no conflict between the id of the image being uploaded and the images already in the environment.
 
 **-d, --disk-instance-id**
 
-Specifies that the instance ID for each disk in the image will not be renamed. By default, the command generates new UUIDs for disks in images that are uploaded. This ensures there are no conflicts between the disks on the image being uploaded and the disks already in the environment.
+Specifies that the instance ID for each disk in the image will not be renamed. By default, the command generates new +UUID+s for disks in images that are uploaded. This ensures there are no conflicts between the disks on the image being uploaded and the disks already in the environment.
 
 **-m, --mac-address**
 
