--- a/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_Red_Hat_Enterprise_Virtualization/Installing_CloudForms.adoc
@@ -138,7 +138,7 @@ Specifies that the +instance ID+ for each disk in the image will not be renamed.
 
 **-m, --mac-address**
 
-Specifies that network components in the image will not be removed from the image. By default, the command removes network interface cards from image being uploaded to prevent conflicts with network cards on other virtual machines already in the environment. If you do not use this option, you can use the Administration Portal to add network interface cards to newly imported images and the Manager will ensure there are no MAC address conflicts.
+Specifies that network components in the image will not be removed from the image. By default, the command removes network interface cards from image being uploaded to prevent conflicts with network cards on other virtual machines already in the environment. If you do not use this option, you can use the +Administration Portal+ to add network interface cards to newly imported images and the Manager will ensure there are no +MAC address+ conflicts.
 
 **-N [NEW_IMAGE_NAME], --name=[NEW_IMAGE_NAME]**
 
@@ -175,10 +175,10 @@ It takes approximately 90 minutes to upload the CloudForms Management Engine App
 
 The following procedure provides manual upload instructions if the Image Uploader tool is not available or fails to upload.
 
-. Log into a host in your Red Hat Enterprise Virtualization with a mount to the Export storage domain.
-. Change to the Export storage domain's directory.
-. Copy the CloudForms Management Engine Appliance OVF archive to this directory.
-. Extract the OVF file using the tar command:
+. Log into a +host+ in your +Red Hat Enterprise Virtualization+ with a mount to the +Export storage domain+.
+. Change to the +Export storage domain's+ directory.
+. Copy the CloudForms Management Engine Appliance **OVF** archive to this directory.
+. Extract the **OVF** file using the tar command:
 +
 ----
 $ tar xvf cfme-rhevm-5.3-15.x86_64.rhevm.ova  
